# PhenoStereo-BFS

./: CMakeLists.txt  Issues.md  Readme.md  cmake_install.cmake  config.json  py_socket_client.py
src/: flirBFS.cpp  flirBFS.h  jetsonGPIO.h  mainTest.cpp  sensorClient.cpp  singleCamera.cpp  singleCamera.h  socketServer.h
utils/gpio/non_root/: setup_gpio.sh
